流行，新款，精选模块写完

--- a/myapp/package.json
+++ b/myapp/package.json
@@ -97,6 +97,11 @@
       "pathRewrite": {
         "^/jsonp": ""
       }
+    },
+    "/api": {
+      "target": "http://aura.maizuo.com/api",
+      "changeOrigin": true,
+      "pathRewrite": { "^/api" : "" }
     }
   }
 }
