--- a/myapp/package.json
+++ b/myapp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd-mobile": "^1.4.0",
+    "fetch-jsonp": "^1.1.1",
     "jquery": "^3.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
